<resources>
    <string name="app_name">JARVIS Remote</string>
    <string name="scan_qr">Scan Pairing QR</string>
    <string name="enter_manually">Enter code manually</string>
    <string name="pair">Pair</string>
    <string name="send">Send</string>
    <string name="message_hint">Message JARVIS…</string>
    <string name="sign_out">Sign out this device</string>
    <string name="incoming_call">Incoming call</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
</resources>
